# sermonsearch

./: Pasted-ConnectError-Errno-2-Name-or-service-not-known-Traceback-File-home-runner-workspace-pythonli-1733327107293.txt  Pasted-Current-Categories-in-Database-christian-life-church-ministry-theology-Category-L-1733331009104.txt  Pasted-Current-Database-Stories-Latest-AI-Extraction-Process-Information-Input-Length-41587-characters-1733326020107.txt  Pasted-OperationalError-connection-to-server-at-ep-ancient-field-a4gi4mpj-us-east-1-aws-neon-tech-2600--1733275294723.txt  main.py  pyproject.toml  replit_zip_error_log.txt  supabase_setup.sql
.streamlit/: config.toml
styles/: custom.css
utils/: ai_helper.py  command_parser.py  database.py  transcript_processor.py  youtube_helper.py
